[gd_scene load_steps=4 format=3 uid="uid://bwaqi21cge243"]

[ext_resource type="Script" path="res://gd/vector3_slider.gd" id="1_kbm2l"]

[sub_resource type="LabelSettings" id="LabelSettings_hiimm"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_uegbh"]
font_size = 22

[node name="Vector3Slider" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kbm2l")

[node name="Left" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Name" type="Label" parent="Left"]
layout_mode = 2
size_flags_horizontal = 4
text = "Vector3Slider"
label_settings = SubResource("LabelSettings_hiimm")

[node name="Middle" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="X" type="Label" parent="Middle"]
layout_mode = 2
size_flags_horizontal = 4
text = "X"
label_settings = SubResource("LabelSettings_uegbh")

[node name="Y" type="Label" parent="Middle"]
layout_mode = 2
size_flags_horizontal = 4
text = "Y"
label_settings = SubResource("LabelSettings_uegbh")

[node name="Z" type="Label" parent="Middle"]
layout_mode = 2
size_flags_horizontal = 4
text = "Z"
label_settings = SubResource("LabelSettings_uegbh")

[node name="Right" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="X" type="Button" parent="Right"]
layout_mode = 2
text = "1.000"

[node name="Y" type="Button" parent="Right"]
layout_mode = 2
text = "1.000"

[node name="Z" type="Button" parent="Right"]
layout_mode = 2
text = "1.000"

[connection signal="button_down" from="Right/X" to="." method="_on_x_button_down"]
[connection signal="button_down" from="Right/Y" to="." method="_on_y_button_down"]
[connection signal="button_down" from="Right/Z" to="." method="_on_z_button_down"]
